--- a/wp-site-content/wp-content/themes/mag-theme/package.json
+++ b/wp-site-content/wp-content/themes/mag-theme/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "mag-theme",
+  "name": "mag-wp-theme",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev:watch-sass": "sass --no-source-map --watch src/sass:dist/css",
+    "dev:vite": "vite",
+    "dev": "npm-run-all --parallel dev:*",
+    "build:sass": "sass --no-source-map src/sass:dist/css",
+    "build:defaults": "tsc && vite build",
+    "build": "npm-run-all build:*",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.33",
+    "postcss-import": "^16.0.0",
+    "sass": "^1.70.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
